c8/fill_iptables
# Generated by xtables-save v1.8.2 on Tue Jun  2 09:45:46 2020
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:test_chain - [0:0]
:jump_chain - [0:0]
:jump_chain2 - [0:0]
-A INPUT -j test_chain
-A test_chain -m set --match-set test.set.v4.1 src -j RETURN
-A test_chain -m set --match-set test.set.v4.2 src -j RETURN
-A test_chain -m set --match-set test.set.v4.3 src -j RETURN
-A test_chain -m set --match-set test.set.v4.4 src -j RETURN
-A test_chain -m set --match-set test.set.v4.5 src -j DROP
-A test_chain -m set --match-set test.set.v4.6 src -j DROP
-A test_chain -j jump_chain
-A test_chain -p tcp -m multiport --dports 20003,20004,20013,20014 -j DROP
-A test_chain -j jump_chain2
-A test_chain -m set --match-set test_set src -j RETURN
COMMIT
# Completed on Tue Jun  2 09:45:46 2020
# Generated by xtables-save v1.8.2 on Tue Jun  2 09:45:46 2020
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:test_chain - [0:0]
-A PREROUTING -j test_chain
-A test_chain -m set --match-set test_set src -j RETURN
COMMIT
# Completed on Tue Jun  2 09:45:46 2020
